--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 		})
 	</script>
 <!--===============================================================================================-->
-	<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 	<script>
 		/* particlesJS.load(@dom-id, @path-json, @callback (optional)); */
 		particlesJS.load('particles-js', 'json/particles.json', function() {
